[package]

name = "ovr"
version = "0.1.0"
authors = [
    "Colin Sherratt",
    "Erick Tryzelaar"
]

build = "scripts/build.rs"

[lib]
name = "ovr"
path = "src/oculus-vr/lib.rs"

[[bin]]
name = "oculus-info"
path = "src/oculus-info/main.rs"

[[bin]]
name = "oculus-debug"
path = "src/oculus-debug.rs"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"

[dependencies]
libc="*"
